# PyWbFBD

./: .gitignore  main.py  setup.cfg
templates/python/: wbfbd.py
templates/vhdl/: block.vhd  wbfbd.vhd
tests/co-simulations/common/python/: tb_cosim.sh
tests/co-simulations/status_array_multiple/python/: tb_cosim.py
tests/co-simulations/status_array_multiple/vhdl/: status_array_multiple.core  tb_cosim.vhd
tests/co-simulations/status_array_single/python/: tb_cosim.py
tests/co-simulations/status_array_single/vhdl/: status_array_single.core  tb_cosim.vhd
tests/co-simulations/uuid_and_timestamp/python/: tb_cosim.py
tests/co-simulations/uuid_and_timestamp/vhdl/: tb_cosim.vhd  uuid_and_timestamp.core
wbfbd/: args.py  utils.py
wbfbd/python/: python.py
wbfbd/vhdl/: status.py  vhdl.py
