[metadata]
name = wbfbd
version = attr: main.VERSION
description = Functional Bus Description Language compiler back-end for Wishbone.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = GPLv3+
keywords =
    Bus Interface
    Control and Status Registers
    Co-simulation
    Documentation Generation
    Electronic Design Automation
    Electronic Systems
    Firmware Generation
    FPGA
    Hardware Design
    HDL
    Hierarchical Register Description
    Memory
    Register Addressing
    Register Synthesis
    RTL
    Software Generation
    SystemVerilog
    VHDL
classifiers =
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Quality Assurance
    Topic :: Utilities
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
author = Michał Kruszewski
author_email = mkru@protonmail.com
url = https://github.com/Functional-Bus-Description-Language/PyWbFBD

[options]
packages = find:
scripts = main.py

[options.entry_points]
console_scripts =
    wbfbd = main:main
